--- a/ex3/ex3.html
+++ b/ex3/ex3.html
@@ -4,31 +4,32 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="./ex3.css">
+    <link rel="stylesheet" href="./assest/ex3.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <title>ex3</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light">
-        <h1 class="navbar-brand p-3" id="navh1">Bootcamp66</h1>
+        <h1 class="navbar-brand p-2" id="navh1">Bootcamp66</h1>
         <div class="collapse navbar-collapse">
           <ul class="navbar-nav">
-            <li class="nav-item p-3">
+            <li class="nav-item p-2">
               <a class="nav-link" href="#">Html Resoume Template</a>
             </li>
-            <li class="nav-item dropdown p-3">
+            <li class="nav-item dropdown p-2">
               <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Html Builder
               </a>
             </li>
-            <li class="nav-item dropdown p-3">
+            <li class="nav-item dropdown p-2">
                 <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   Demo Pages
                 </a>
               </li>
-              <li class="nav-item dropdown p-3">
+              <li class="nav-item dropdown p-2">
                 <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   More Template
                 </a>
@@ -36,6 +37,50 @@
           </ul>
         </div>
       </nav>
+     <div id="demo" class="carousel slide" data-bs-ride="carousel">
+
+    <div class="carousel-indicators">
+        <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
+        <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
+        <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
+    </div>
+    
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+        <img src="./assest/img/Blue-Sea-Travel-Wallpapers-HD.jpg" alt="seaone" class="d-block" style="width:100%">
+            <div class="carousel-caption text-start d-none d-sm-none d-md-none d-lg-block imagetext">
+                <h1 class="display-1">HELLO</h1>
+                <h3 class="display-5">I am Mary and <span style="color: #ffcb3c;">Dreamer</span></h3>
+                <p>SPECIALIZWD IN DESIGN AND PHOTIGRAPHY</p>
+            </div>
+        </div>
+        <div class="carousel-item">
+        <img src="./assest/img/A_beach_in_Maldives.jpg" alt="seatwo" class="d-block" style="width:100%">
+            <div class="carousel-caption text-start mb-5 d-none d-sm-none d-md-none d-lg-block imagetext">
+                <h1 class="display-1">HELLO</h1>
+                <h3 class="display-5">I am Mary and <span style="color: #ffcb3c;">Dreamer</span></h3>
+                <p>SPECIALIZWD IN DESIGN AND PHOTIGRAPHY</p>
+            </div> 
+        </div>
+        <div class="carousel-item">
+            <img src="./assest/img/thumb-1920-96622.jpg" alt="seathree" class="d-block" style="width:100%">
+            <div class="carousel-caption text-start mb-5 d-none d-sm-none d-md-none d-lg-block imagetext">
+                <h1 class="display-1">HELLO</h1>
+                <h3 class="display-5">I am Mary and <span style="color: #ffcb3c;">Dreamer</span></h3>
+                <p>SPECIALIZWD IN DESIGN AND PHOTIGRAPHY</p>
+            </div>  
+        </div>
+    </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon"></span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
+            <span class="carousel-control-next-icon"></span>
+        </button>
+    </div>
+
+  
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   </body>
 </html>
