--- a/ex3/ex3.html
+++ b/ex3/ex3.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="./assest/ex3.css">
+    <link rel="stylesheet" href="./css/all.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-    <title>ex3</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light">
@@ -49,24 +49,24 @@
         <div class="carousel-item active">
         <img src="./assest/img/Blue-Sea-Travel-Wallpapers-HD.jpg" alt="seaone" class="d-block" style="width:100%">
             <div class="carousel-caption text-start d-none d-sm-none d-md-none d-lg-block imagetext">
-                <h1 class="display-1">HELLO</h1>
-                <h3 class="display-5">I am Mary and <span style="color: #ffcb3c;">Dreamer</span></h3>
+                <h1>HELLO</h1>
+                <h3>I am Mary and <span style="color: #ffcb3c;">Dreamer</span></h3>
                 <p>SPECIALIZWD IN DESIGN AND PHOTIGRAPHY</p>
             </div>
         </div>
         <div class="carousel-item">
         <img src="./assest/img/A_beach_in_Maldives.jpg" alt="seatwo" class="d-block" style="width:100%">
-            <div class="carousel-caption text-start mb-5 d-none d-sm-none d-md-none d-lg-block imagetext">
-                <h1 class="display-1">HELLO</h1>
-                <h3 class="display-5">I am Mary and <span style="color: #ffcb3c;">Dreamer</span></h3>
+            <div class="carousel-caption text-start d-none d-sm-none d-md-none d-lg-block imagetext">
+                <h1>HELLO</h1>
+                <h3>I am Mary and <span style="color: #ffcb3c;">Dreamer</span></h3>
                 <p>SPECIALIZWD IN DESIGN AND PHOTIGRAPHY</p>
             </div> 
         </div>
         <div class="carousel-item">
             <img src="./assest/img/thumb-1920-96622.jpg" alt="seathree" class="d-block" style="width:100%">
-            <div class="carousel-caption text-start mb-5 d-none d-sm-none d-md-none d-lg-block imagetext">
-                <h1 class="display-1">HELLO</h1>
-                <h3 class="display-5">I am Mary and <span style="color: #ffcb3c;">Dreamer</span></h3>
+            <div class="carousel-caption text-start d-none d-sm-none d-md-none d-lg-block imagetext">
+                <h1>HELLO</h1>
+                <h3>I am Mary and <span style="color: #ffcb3c;">Dreamer</span></h3>
                 <p>SPECIALIZWD IN DESIGN AND PHOTIGRAPHY</p>
             </div>  
         </div>
@@ -78,9 +78,37 @@
             <span class="carousel-control-next-icon"></span>
         </button>
     </div>
+    <div class="row justify-content-center text-center">
+        <h2 class="col-12 s-header__titel headone">I'M SPECIALIZED IN</h2>
+        <div class="col-6 col-md-12  line-h"></div>
+        <p class="col-md-6 col-lg-12 my-4">Committed and energetic professional photographer with 7+ years extensive experience in custom-made and specialized photography</p>
+    </div>
+    <div class="container px-5">
+        <div class="row gx-5 my-3">
+            <div class="col-lg-3 col-md-6 col-12">
+                <i class="far fa-file-alt fa-2x mb-4"></i>  
+                <h5>conceotiong</h5>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+            </div>
+            <div class="col-lg-3 col-md-6 col-12">
+                <i class="far fa-newspaper fa-2x mb-4"></i>               
+                <h5>UI/UX</h5>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+            </div>
+            <div class="col-lg-3 col-md-6 col-12">
+                <i class="far fa-images fa-2x mb-4"></i>
+                <h5>VISUAL DESIGN</h5>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+            </div>
+            <div class="col-lg-3 col-md-6 col-12">
+                <i class="far fa-thumbs-up fa-2x mb-4"></i>
+                <h5>INTERACTION</h5>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+            </div>
+        </div>
+    </div>
 
-  
-
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   </body>
 </html>
