--- a/ex3/ex3.html
+++ b/ex3/ex3.html
@@ -50,7 +50,7 @@
         <img src="./assest/img/Blue-Sea-Travel-Wallpapers-HD.jpg" alt="seaone" class="d-block" style="width:100%">
             <div class="carousel-caption text-start d-none d-sm-none d-md-none d-lg-block imagetext">
                 <h1>HELLO</h1>
-                <h3>I am Mary and <span style="color: #ffcb3c;">Dreamer</span></h3>
+                <h3 class="headerthree">I am Mary and <span>Dreamer</span></h3>
                 <p>SPECIALIZWD IN DESIGN AND PHOTIGRAPHY</p>
             </div>
         </div>
@@ -58,7 +58,7 @@
         <img src="./assest/img/A_beach_in_Maldives.jpg" alt="seatwo" class="d-block" style="width:100%">
             <div class="carousel-caption text-start d-none d-sm-none d-md-none d-lg-block imagetext">
                 <h1>HELLO</h1>
-                <h3>I am Mary and <span style="color: #ffcb3c;">Dreamer</span></h3>
+                <h3 class="headerthree">I am Mary and <span>Dreamer</span></h3>
                 <p>SPECIALIZWD IN DESIGN AND PHOTIGRAPHY</p>
             </div> 
         </div>
@@ -66,7 +66,7 @@
             <img src="./assest/img/thumb-1920-96622.jpg" alt="seathree" class="d-block" style="width:100%">
             <div class="carousel-caption text-start d-none d-sm-none d-md-none d-lg-block imagetext">
                 <h1>HELLO</h1>
-                <h3>I am Mary and <span style="color: #ffcb3c;">Dreamer</span></h3>
+                <h3 class="headerthree">I am Mary and <span>Dreamer</span></h3>
                 <p>SPECIALIZWD IN DESIGN AND PHOTIGRAPHY</p>
             </div>  
         </div>
@@ -108,6 +108,77 @@
         </div>
     </div>
 
+    <div class="container-fluid mt-5">
+        <div class="row justify-content-center text-center" style="font-size: 24px;">
+            <div class="col-lg-3 col-md-6 col-12 item-even">
+                <i class="fas fa-male fa-2x m-4"></i>
+                <h4 class="p-3">Clients</h4>
+                <h3 class="p-3">37</h3>
+            </div>
+            <div class="col-lg-3 col-md-6 col-12 bg-light">
+                <i class="fas fa-rocket fa-2x m-4"></i>
+                <h4 class="p-3">aworde winner</h4>
+                <h3 class="p-3">13</h3>
+            </div>
+            <div class="col-lg-3 col-md-6 col-12 item-even">
+                <i class="fas fa-clock fa-2x m-4"></i>
+                <h4 class="p-3">Hours Worked</h4>
+                <h3 class="p-3">900</h3> 
+            </div>
+            <div class="col-lg-3 col-md-6 col-12 bg-light">
+                <i class="fas fa-magic fa-2x m-4"></i>
+                <h4 class="p-3">Project Completed</h4>
+                <h3 class="p-3">40</h3>
+            </div>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="row justify-content-center text-center">
+           <h1 class="col-12 headone">MY WORKING PROCESS</h1>
+           <div class="col-12 line-h"></div>
+           <p class="col-md-6 col-lg-12 my-5">Conversant with different sorts of digital photography including style, wildlife and undersea due to HTML Website Template</p>
+        </div>
+    </div>
+
+    <div class="container px-5">
+        <div class="row gx-5 my-3 ">
+            <div class="col-lg-3 col-md-6 col-12">
+                <div class="circle-icon position-relative">
+                    <i class="far fa-comment-dots fa-2x icones-bg my-4"></i>
+                    <div class="number-circle">1</div>
+                    <i class="fas fa-long-arrow-alt-right nextt"></i>
+                </div>
+                <h5>DISCUSS THE PROJECT</h5>
+                <p class="p-contentthree">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s. <span>Learn more</span></p>
+            </div>
+            <div class="col-lg-3 col-md-6 col-12 ">
+                <div class="circle-icon position-relative">
+                    <i class="far fa-lightbulb fa-2x icones-bg my-4"></i>
+                    <div class="number-circle">2</div>
+                    <i class="fas fa-long-arrow-alt-right nextt"></i>
+                </div>
+                <h5>LOT OF CONCEPTING</h5>
+                <p class="p-contentthree">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s. <span>Learn more</span></p>
+            </div>
+            <div class="col-lg-3 col-md-6 col-12">
+                <div class="circle-icon position-relative">
+                    <i class="far fa-id-card fa-2x icones-bg my-4"></i>
+                    <div class="number-circle">3</div>
+                    <i class="fas fa-long-arrow-alt-right nextt"></i>
+                </div> 
+                <h5>UX/UI PLANNING</h5>
+                <p class="p-contentthree">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s. <span>Learn more</span></p>
+            </div>
+            <div class="col-lg-3 col-md-6 col-12">
+                <div class="circle-icon position-relative">
+                    <i class="far fa-sun fa-2x icones-bg my-4 iconfour"></i>
+                    <div class="number-circle">4</div>
+                </div> 
+                <h5>DESIGN</h5>
+                <p class="p-contentthree">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s. <span>Learn more</span></p>
+            </div>
+        </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   </body>
