--- a/ex3/ex3.html
+++ b/ex3/ex3.html
@@ -14,6 +14,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light">
         <h1 class="navbar-brand p-2" id="navh1">Bootcamp66</h1>
+        <i class="fas fa-bars p-2 d-lg-none"></i>
         <div class="collapse navbar-collapse">
           <ul class="navbar-nav">
             <li class="nav-item p-2">
