build two nav with float and find 6 image for page

--- a/ex4/ex4.html
+++ b/ex4/ex4.html
@@ -8,6 +8,52 @@
     <link rel="stylesheet" href="./assest/ex4.css">
 </head>
 <body>
-    
+    <div class="menu">
+        <img class="logo" src="./assest/img/logo--en.svg" alt="logo">
+        <div class="menuRight">
+            <a href="#">All Searches</a> 
+            <div class="line"></div>
+            <a href="#">login</a> 
+        </div>
+        <div class="menuCenter">
+            <a class="active" href="#">HOME</a> 
+            <a href="#">Age groups</a> 
+            <a href="#">Destinations</a> 
+            <a href="#">Experiences</a>
+            <a href="#">Info</a>
+            <a href="#">Last Link...</a>
+        </div>
+    </div>
+    <div class="menuSecond"> 
+        <h2 class="textLeft"> Destination </h2>
+        <div class="textRight">
+            <p href="#">HOME / Destination</p>
+        </div>
+    </div>
+    <div class="headerDestination">
+        <h1>Destination</h1>
+        <p>stay up data check out the deals for these trending Destination</p>
+    </div>
+    <div class="gallery-container">
+        <div class="figure"style="margin-left: 12%;">
+            <img src="./img/it_00_00_1.webp" alt="Alt text" style="height: 300px;width: 350px; ">
+            <figcaption>
+                image caption
+            </figcaption>
+        </div>
+        <div class="figure">
+            <img src="./img/italia.jpg" alt="Alt text" style="height: 300px;width: 350px;">
+            <figcaption>
+                image caption
+            </figcaption>
+        </div>
+        <div class="figure">
+            <img src="./img/the-trevi-fountain-italia_169.jpeg" alt="Alt text" style="height: 300px;width: 350px;">
+            <figcaption>
+                image caption
+            </figcaption>
+        </div>
+    </div>
+
 </body>
 </html>
