--- a/ex4/ex4.html
+++ b/ex4/ex4.html
@@ -34,26 +34,58 @@
         <h1>Destination</h1>
         <p>stay up data check out the deals for these trending Destination</p>
     </div>
-    <div class="gallery-container">
-        <div class="figure"style="margin-left: 12%;">
-            <img src="./img/it_00_00_1.webp" alt="Alt text" style="height: 300px;width: 350px; ">
-            <figcaption>
-                image caption
-            </figcaption>
+    <div class="imagesOneRow">
+        <div class="polaroid">
+            <img src="./assest/img/img_5terre.jpg" alt="tripImageOne" style="width:100%">
+            <div class="container">
+                <p>Germany</p>
+            </div>
         </div>
-        <div class="figure">
-            <img src="./img/italia.jpg" alt="Alt text" style="height: 300px;width: 350px;">
-            <figcaption>
-                image caption
-            </figcaption>
+        <div class="polaroid">
+            <img src="./assest/img/img_chania.jpg" alt="tripImageTwo" style="width:100%">
+            <div class="container">
+                <p>Spain</p>
+            </div>
         </div>
-        <div class="figure">
-            <img src="./img/the-trevi-fountain-italia_169.jpeg" alt="Alt text" style="height: 300px;width: 350px;">
-            <figcaption>
-                image caption
-            </figcaption>
+        <div class="polaroid">
+            <img src="./assest/img/img_forest.jpg" alt="tripImageThree" style="width:100%">
+            <div class="container">
+                <p>Switzerland</p>
+            </div>
         </div>
     </div>
+    <div class="imagesTwoRow">
+        <div class="polaroid">
+            <img src="./assest/img/lights600x400.jpg" alt="tripImageFour" style="width:100%">
+            <div class="container">
+                <p>London</p>
+            </div>
+        </div>
+        <div class="polaroid">
+            <img src="./assest/img/paris.jpg" alt="tripImageFive" style="width:100%">
+            <div class="container">
+                <p>Belgium</p>
+            </div>
+        </div>
+        <div class="polaroid">
+            <img src="./assest/img/pic_trulli.jpg" alt="tripImageSix" style="width:100%">
+            <div class="container">
+                <p>USA</p>
+            </div>
+        </div>
+    </div>
+
+    <button class="btnView">view more</button>
+
+    <div class="footertop">
+        <h1>subscribe to our free newsletter</h1>
+        <form>
+            <input type="text" id="fName" placeholder="Name">
+            <input type="email" id="fName" placeholder="Email">
+            <button></button>
+        </form>        
+    </div>
+
 
 </body>
 </html>
