set nav with form and h1

--- a/ex4/ex4.html
+++ b/ex4/ex4.html
@@ -77,13 +77,20 @@
 
     <button class="btnView">view more</button>
 
-    <div class="footertop">
-        <h1>subscribe to our free newsletter</h1>
+    <div class="formPage">
+        <h2>subscribe to our free newsletter</h2>
         <form>
-            <input type="text" id="fName" placeholder="Name">
-            <input type="email" id="fName" placeholder="Email">
-            <button></button>
+            <input type="text" class="inpur-text name" placeholder="Name">
+            <input type="email" class="inpur-text" placeholder="Email">
+            <button type="submit" class="btnSubscribe">subscribe</button>
         </form>        
+    </div>
+
+    <div>
+        <div>
+            <img class="logo" src="./assest/img/logo--en.svg" alt="logo">
+            <p></p>
+        </div>
     </div>
 
 
