--- a/ex4/ex4.html
+++ b/ex4/ex4.html
@@ -86,11 +86,47 @@
         </form>        
     </div>
 
-    <div>
-        <div>
+    <div class="continer-footer">
+        <div class="text-logo-footer">
             <img class="logo" src="./assest/img/logo--en.svg" alt="logo">
-            <p></p>
+            <p>my texinter took a galley of type and scrambled it to make a type specimen book. </p>
         </div>
+        <div class="text-logo-footer">
+            <h3>booked...now why ?</h3>
+            1.Lorem ipsum dolor sit amet <br>
+            2.Lorem ipsum dolor sit amet <br>
+            3.Lorem ipsum dolor sit amet <br>
+            4.Lorem ipsum dolor sit amet <br>
+            5.Lorem ipsum dolor sit amet <br>
+            6.Lorem ipsum dolor sit amet <br>
+            7.Lorem ipsum dolor sit amet <br>
+        </div>
+        <div class="text-logo-footer">
+            <h3>community</h3>
+            <p>
+                Lorem<br>
+                Lorem<br>
+                Lorem<br>
+                Lorem<br>
+                Lorem<br>
+                Lorem<br>
+                Lorem<br>
+            </p>
+        </div>
+        <div class="text-logo-footer">
+            <h3>Useful-link</h3>
+            <p>
+                Lorem<br>
+                Lorem<br>
+                Lorem<br>
+                Lorem<br>
+                Lorem<br>
+            </p>
+        </div>
+    </div>
+
+    <div>
+        
     </div>
 
 
