set footer in end of page and set hover for btn

--- a/ex4/ex4.html
+++ b/ex4/ex4.html
@@ -125,8 +125,8 @@
         </div>
     </div>
 
-    <div>
-        
+    <div class="footer">
+        <p>my texinter took a galley of type and scrambled it to make a type specimen book. </p>
     </div>
 
 
