--- a/ex3/ex3.html
+++ b/ex3/ex3.html
@@ -13,7 +13,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light">
+    <nav class="navbar navbar-expand-lg fixed-top navbar-light bg-white">
         <h1 class="navbar-brand p-2" id="navh1">Bootcamp66</h1>
         <i class="fas fa-bars p-2 d-lg-none"></i>
         <div class="collapse navbar-collapse">
